# DM-Office

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: build.yml
info/: docs.md
src/: main.cc  main.cpp
src/Widgets/AppWin/: AppWin.cpp  AppWin.h
src/Widgets/custom/conteiners/: MHeaderBar.cpp  MHeaderBar.h
src/Widgets/custom/documents/: EditTextView.cpp  EditTextView.h  TextDocument.h
src/classes/: CssLoader.cpp  CssLoader.h
src/interface/: IEditTextView.h  ITextDocument.h
